package operate

import (
	"context"
)
	
// 列表
func ProductionGet(ctx context.Context, in *proto.ProductionGetReq) (*proto.ProductionGetResp, error){
	return nil,nil
}

// 修改
func ProductionPut(ctx context.Context, in *proto.ProductionPutReq) (*proto.ProductionPutResp, error){
	return nil,nil
}

// 新增
func ProductionPost(ctx context.Context, in *proto.ProductionPostReq) (*proto.ProductionPostResp, error){
	return nil,nil
}


func ProductionDel(ctx context.Context, in *proto.ProductionDelReq) (*proto.ProductionDelResp, error){
	return nil,nil
}

